forEnersys/nthing Salesforce CPQ/objects/TermCondition__c.object
<CustomObject>
    <customHelpPage>TermConditionHelp</customHelpPage>
    <description>Condition that determines whether parent quote term is printed or not.</description>
    <fields>
        <fullName>Index__c</fullName>
        <description>Assign an unique number to this Condition to reference it in the Quote Term&apos;s Advanced Condition.</description>
        <inlineHelpText>Assign an unique number to this Condition to reference it in the Quote Term&apos;s Advanced Condition.</inlineHelpText>
        <label>Index</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <description>The operator for this field.</description>
        <inlineHelpText>Choose the operator for the field.</inlineHelpText>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>not equals</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>less or equals</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>greater or equals</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>ends with</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QuoteTerm__c</fullName>
        <description>Parent term for this term.</description>
        <inlineHelpText>Parent term for this term.</inlineHelpText>
        <label>Quote Term</label>
        <referenceTo>QuoteTerm__c</referenceTo>
        <relationshipLabel>Term Conditions</relationshipLabel>
        <relationshipName>UseConditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TestedField__c</fullName>
        <description>Field on quote object used for testing this condition.</description>
        <inlineHelpText>Field on quote object used for testing this condition.</inlineHelpText>
        <label>Tested Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>List Amount</fullName>
                </value>
                <value>
                    <fullName>Regular Amount</fullName>
                </value>
                <value>
                    <fullName>Customer Amount</fullName>
                </value>
                <value>
                    <fullName>Net Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TestedVariable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Summary variable used in testing this condition.</description>
        <inlineHelpText>Summary variable used in testing this condition.</inlineHelpText>
        <label>Tested Variable</label>
        <referenceTo>SummaryVariable__c</referenceTo>
        <relationshipLabel>Term Conditions</relationshipLabel>
        <relationshipName>TermConditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>Value to test against.</description>
        <inlineHelpText>Value to test against.</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Term Condition</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Condition #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Term Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Field_and_Variable</fullName>
        <active>true</active>
        <description>Validates that either field or summary variable is selected, but not both.</description>
        <errorConditionFormula>AND(NOT(ISPICKVAL(TestedField__c, &apos;&apos;)),NOT(ISBLANK(TestedVariable__c)))</errorConditionFormula>
        <errorMessage>You may not select both field and variable to test. Create separate conditions to test against field and variable.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Field_or_Variable</fullName>
        <active>true</active>
        <description>Validates that either field or summary variable is selected.</description>
        <errorConditionFormula>AND(ISPICKVAL(TestedField__c, &apos;&apos;),ISBLANK(TestedVariable__c))</errorConditionFormula>
        <errorMessage>You must select either field or variable to test.</errorMessage>
    </validationRules>
</CustomObject>